--- a/src/main/resources/META-INF/neoforge.mods.toml
+++ b/src/main/resources/META-INF/neoforge.mods.toml
@@ -94,4 +94,6 @@ description='''${mod_description}'''
 
 
 #[[mixins]]
-#config="mixins.hardcoremode.json"
+#config="mixins.lc.json"
+[[accessTransformers]]
+file="META-INF/accesstransformer.cfg"
